@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2010-11-22"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20101122
-#define RUBY_PATCHLEVEL 308
+#define RUBY_PATCHLEVEL 309
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
